--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -22,11 +22,14 @@ html > body {
 }
 
 .btn-text-link {
-	color:black;
+	color:white;
 }
-
 
 .btn-text-link:hover {
 	color:olive;
-	text-decoration: underline;
+/* 	text-decoration: underline; */
+}
+
+.border-bottom-line {
+	border-bottom: 1px solid #d6cbcb;
 }
