--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -43,6 +43,7 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	border-bottom: 1px solid #B7B7B7;
 }
 .head-header {
+	z-index: 3;
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -72,10 +73,12 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	border-radius: 0 20px 20px 0;
 }
 
+
 .search-select {
-	width: 100px;
-	height: 38px;
-	border: 1px solid #B7B7B7;
+	width: 75px;
+	border-width: 1px 0px;
+	border-color: #B7B7B7;
+	border-style: solid;
 	text-align: center;
 }
 
@@ -84,20 +87,192 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	border: 1px solid #B7B7B7;
 }
 
-.main-img-a {
-	display: inline-block;
-}
 
-.main-img {
-	width: 355px;
-	height: 277px;
-	border-radius: 5px;
-}
 
 .main-span {
 	font-size: 0.8rem;
 	font-weight: 700;
 }
 
-.main-img-span {
+.layer-section {
+	position: absolute;
+	border: 1px solid #B7B7B7;
+	border-radius: 5px;
+	width: 300px;
+	background-color: #fff;
+	margin-top: 2px;
+	display: none;
 }
+
+.layer-section-in {
+	margin: 25px;
+}
+.layer-section-in > h1 {
+	font-size: 20px;
+}
+
+.layer-section-in > p {
+    color: rgb(134, 134, 134);
+    font-size: 13px;
+    font-weight: 400;
+    margin: 4px 0px;
+    line-height: 20px;
+}
+
+.section-label {
+	font-size: 15px;
+	display: flex;
+	align-items: center;
+	margin: 4px 3px;
+}
+
+.search-section-div {
+	z-index: 5;
+	position: relative;
+	margin: 0px 10px;
+}
+
+
+
+.search-button-title {
+	border: 1px solid #B7B7B7;
+	border-radius: 5px;
+	font-size: 14px;
+    font-weight: bold;
+	text-align: center;
+	padding: 6px 12px;
+	
+}
+
+.search-head {
+	z-index: 3;
+	position: fixed;
+}
+
+.section-button {
+	display: flex;
+	justify-content: flex-end;
+}
+/* mainPage css 처리 */
+/* mainPage css 처리 */
+/* mainPage css 처리 */
+.main-img-a {
+	display: inline-block;
+}
+.main-img-div{
+	position: relative;
+}
+.main-img {
+	
+	width: 355px;
+	height: 277px;
+	border-radius: 5px;
+}
+
+.main-img-div:hover {
+	filter: brightness(0.9);
+}
+.main-img-div:hover > .list-save-button {
+	display: block;
+}
+
+/* eventArticle_list css 처리 */
+/* eventArticle_list css 처리 */
+/* eventArticle_list css 처리 */
+.list-save-button {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 80%;
+}
+.list-save-icon {
+	font-size: 50px;
+	position: relative;
+	border-radius: 0;
+}
+.list-save-span {
+	font-size:0.7rem;
+	color: white;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate( -50%, -50% );
+}
+
+div {
+	display: block;
+} 
+/* myPage css 처리 */
+/* myPage css 처리 */
+/* myPage css 처리 */
+.myPage-wrap{
+	position: relative;
+	width: 100%;
+	padding-top: 176px;
+	margin: 0 auto;
+	text-align: left;
+}
+
+.container-box {
+	position: relative;
+	width: 1200px;
+	min-width: 1200px;
+	margin: 0 auto;
+	
+}
+
+.myPage-left-div{
+	border-top: 1px solid #B7B7B7;
+	padding: 15px 20px;
+
+}
+.myPage-left-h2 {
+	font-weight: bold;
+	font-size: 17px;
+	padding: 8px 0;
+}
+
+/* myPage-center css */
+/* myPage-center css */
+/* myPage-center css */
+.myPage-center-section{
+	float: right;
+	text-align: left;
+}
+.myPage-center-div{
+	position: relative;
+	border: 1px solid #B7B7B7;
+	padding: 40px;
+	width: 1000px;
+}
+.myPage-head-div {
+	position: relative;
+	padding: 20px 0;
+	font-size: 38px;
+}
+.myPage-eventArticle{
+	position: relative;
+}
+.myPage-eventArticle-div{
+    margin-bottom: 30px;
+    border-bottom: 2px solid #489CFF;
+}
+.myPage-eventArticle-li {
+	position: relative;
+    display: inline-block;
+}
+.myPage-eventArticle-li-a {
+	display: block;
+}
+.myPage-left-section {
+	position: relative;
+	width: 188px;
+	padding: 0;
+	margin: 0;
+	background: #fff;
+	border-left: 1px solid #B7B7B7;
+	border-right: 1px solid #B7B7B7;
+	border-bottom: 1px solid #B7B7B7;
+	text-align: left;
+}
+
