--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -40,7 +40,7 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 }
 
 .border-bottom-line {
-	border-bottom: 1px solid #B7B7B7;
+	border-bottom: 1px solid #F3F3F3;
 }
 .head-header {
 	z-index: 3;
@@ -77,14 +77,14 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 .search-select {
 	width: 75px;
 	border-width: 1px 0px;
-	border-color: #B7B7B7;
+	border-color: #F3F3F3;
 	border-style: solid;
 	text-align: center;
 }
 
 .search-list {
 	height: 48px;
-	border: 1px solid #B7B7B7;
+	border: 1px solid #F3F3F3;
 }
 
 
@@ -96,7 +96,7 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 
 .layer-section {
 	position: absolute;
-	border: 1px solid #B7B7B7;
+	border: 1px solid #F3F3F3;
 	border-radius: 5px;
 	width: 300px;
 	background-color: #fff;
@@ -135,7 +135,7 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 
 
 .search-button-title {
-	border: 1px solid #B7B7B7;
+	border: 1px solid #F3F3F3;
 	border-radius: 5px;
 	font-size: 14px;
     font-weight: bold;
@@ -153,9 +153,10 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	display: flex;
 	justify-content: flex-end;
 }
-/* mainPage css 처리 */
-/* mainPage css 처리 */
-/* mainPage css 처리 */
+
+/* eventArticle_list css 처리 */
+/* eventArticle_list css 처리 */
+/* eventArticle_list css 처리 */
 .main-img-a {
 	display: inline-block;
 }
@@ -176,27 +177,20 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	display: block;
 }
 
-/* eventArticle_list css 처리 */
-/* eventArticle_list css 처리 */
-/* eventArticle_list css 처리 */
 .list-save-button {
 	display: none;
 	position: absolute;
 	top: 0;
 	left: 80%;
+	transform: translate( 90%, 20% );
 }
 .list-save-icon {
-	font-size: 50px;
+	font-size: 30px;
 	position: relative;
-	border-radius: 0;
+	
 }
 .list-save-span {
-	font-size:0.7rem;
-	color: white;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate( -50%, -50% );
+
 }
 
 div {
