저장한 이벤트 페이지 꾸미는중

--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -226,6 +226,12 @@ div {
 .myPage-left-ul{
 	font-weight: light;
 	font-size: 14px;
+	color: #666;
+	
+}
+
+.myPage-left-ul > li:hover{
+	text-decoration: underline;
 }
 /* myPage-center css */
 /* myPage-center css */
@@ -245,12 +251,15 @@ div {
 	padding: 20px 0;
 	font-size: 38px;
 }
+.myEventArticle-table {
+	width: 100%;
+}
 .myPage-eventArticle{
 	position: relative;
 }
 .myPage-eventArticle-div{
 	display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     border-bottom: 2px solid #489CFF;
 }
 .myPage-eventArticle-li {
@@ -286,9 +295,42 @@ div {
 	border-bottom: 1px solid #B7B7B7;
 	text-align: left;
 }
+
+.myEventArticle-table-div {
+}
+
 .myEventArticle-table-div th {
 	text-align: center;
+	border: 1px solid #F3F3F3;
+	border-top: 1px solid #000;
+	padding: 5px 0px;
+	background-color: #EAEAEA;
 }
 .myEventArticle-table-div td {
 	text-align: center;
+	border: 1px solid #F3F3F3;
+	padding: 21px 0px;
+	
+}
+
+#saveEventCheckBox {
+	width:16px;
+	height:16px;
+	position: relative;
+    top: 3px;
+}
+#saveEventCheckBoxCol{
+	width:16px;
+	height:16px;
+	position: relative;
+    top: 3px;
+}
+.saveEventArticle-delete-div{
+	text-align: right;
+}
+.saveEventArticle-delete{
+	padding: 10px 25px;
+	margin: 15px 10px;
+	border: 1px solid #D8D8D8;
+	background-color: #EAEAEA;
 }
