--- a/src/main/resources/static/resource/common.css
+++ b/src/main/resources/static/resource/common.css
@@ -53,7 +53,6 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	
 }
 
 .search-input {
@@ -90,7 +89,9 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 	border: 1px solid #F3F3F3;
 }
 
-
+.search-body{
+	padding-bottom: 200px;
+}
 
 .main-span {
 	font-size: 0.8rem;
@@ -161,7 +162,7 @@ html > body .toast-ui-viewer .toastui-editor-contents {
 /* eventArticle_list css 처리 */
 /* eventArticle_list css 처리 */
 .listEventArticle-main {
-	margin-top: 25px;
+	
 }
 
 .main-img {
@@ -463,7 +464,6 @@ div {
 	color: #489CFF;
 }
 body {
-	background-color: #f6f6f6;
 }
 
 /* writeEventArticle CSS처리 */
@@ -671,13 +671,29 @@ body {
 }
 
 .kakao-btn{
-	background-color: yellow;
+	background-color: rgb(254, 229, 0);
 	width: 200px;
-	height: 33px;
-	border-radius: 3px;
+	height: 56px;
+	border-radius: 6px;
 	text-align: center;
+	font-weight: 700;
 }
 .kakao-btn-li{
 	width: 200px;
 	height: 33px;
 }
+
+.loginBox{
+	background-color: #fff;
+	width: 500px;
+	height: 500px;
+	border: 1px ;
+	margin: 0 auto;
+}
+
+.foot-ad{
+	background-color: #f3f3f3;
+	margin-top: 150px;
+	height: 150px;
+}
+
